--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@remix-run/dev": "^2.17.1",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
-    "vite": "^7.1.8"
+    "vite": "^6.3.6"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
